# heartcore

./: README.md  build  run-linux-cli  run-web  test  watch
src/: build  rust-worker.js
src/assets/: .gitignore
src/assets/shared-data/views/: console.html
src/assets/web/: app.css  app.js  index.html  manifest.json  rust-worker.in.js  rust-worker.js  tailwind.config.js
src/formats/: Cargo.toml
src/formats/src/: lib.rs
src/hc_formats/: Cargo.toml
src/hc_formats/src/: lib.rs
src/hc_io/: Cargo.toml
src/hc_io/src/: lib.rs
src/hc_network/: Cargo.toml
src/hc_network/src/: lib.rs
src/hc_renderer/: Cargo.toml
src/hc_renderer/src/: bin.rs  lib.rs
src/hc_storage/: Cargo.toml
src/hc_storage/src/: lib.rs
src/hc_utilities/: Cargo.toml
src/hc_utilities/src/: hcu_json.rs  lib.rs
src/hc_workspace/: Cargo.toml
src/hc_workspace/src/: bin.rs  issues.md  lib.rs
src/renderer/: Cargo.toml
src/renderer/src/: lib.rs
src/storage/: Cargo.toml
src/storage/src/: lib.rs
src/utilities/: Cargo.toml
src/utilities/src/: lib.rs
src/workspace/: Cargo.toml
src/workspace/src/: bin.rs  lib.rs
