[package]
name = "formats"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
utilities = { path = "../utilities" }
wasm-bindgen = "0.2"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]