[package]
name = "hc_formats"
version = "0.1.0"
edition = "2021"
description = "Tools to convert between various data formats."

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hc_utilities = { path = "../hc_utilities" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
ammonia = "4"

[dependencies.uuid]
version = "1.12.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
