[package]
name = "hc_network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hc_utilities = { path = "../hc_utilities" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["Request", "RequestInit", "RequestMode", "Response", "Window"] }
