[package]
name = "hc_network"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hc_utilities = { path = "../hc_utilities" }
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
reqwest = "0.12"
dirs = "5.0"
cfg-if = "1.0"
custom-print = "1.0.0"
wasm-rs-dbg = "0.1.2"
ehttp = "0.5.0"
serde_json = "1.0.133"
log = "0.4"
wasm-logger = "0.2"
matchbox_socket = "0.10.0"
futures-timer = { version = "3", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = { version = "0.3", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
tokio = "1.32"
