[package]
name = "hc_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "hc_renderer"
path = "src/bin.rs"

[dependencies]
hc_utilities = { path = "../hc_utilities" }
wasm-bindgen = "0.2"
ipc-channel = "0.18"
getrandom = { version = "0.2", features = ["js"] }