[package]
name = "hc_utilities"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = "0.2"
cfg-if = "1.0"
serde_json = "1.0.136"
log = "0.4"
fern = "0.7"
humantime = "2.1.0"
console_log = "1.0.0"
tokio = { version = "1.43.0", features = ["rt"] }
# JSON things
jaq-core = "2.1"
jaq-std = "2.1"
jaq-json = { version = "1.1", features = [ "parse" ] }
itertools = "0.14.0"
yansi = "1.0.1"
hifijson = "0.2"
thiserror = "2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
duct = "0.13"
nix = { version = "0.29", features = ["fs"] }
tempfile = "3.15"
ipc-channel = "0.19.0"
ipmb = { version = "0.8.0-20241122" }
