[package]
name = "hc_workspace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "workspace"
path = "src/bin.rs"

[dependencies]
hc_formats = { path = "../hc_formats" }
hc_network = { path = "../hc_network" }
hc_renderer = { path = "../hc_renderer" }
hc_storage = { path = "../hc_storage" }
hc_utilities = { path = "../hc_utilities" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"
