[package]
name = "hc_workspace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "hc_workspace"
path = "src/bin.rs"

[dependencies]
hc_formats = { path = "../hc_formats" }
hc_io = { path = "../hc_io" }
hc_network = { path = "../hc_network" }
hc_renderer = { path = "../hc_renderer" }
hc_storage = { path = "../hc_storage" }
hc_utilities = { path = "../hc_utilities" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
# argon2 = "0.5.3"
# ipc-channel = "0.18"
cfg-if = "1.0"
tokio = "1.43.0"
serde_json = "1.0.136"
futures-util = "0.3"
