[package]
name = "workspace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "workspace"
path = "src/bin.rs"

[dependencies]
renderer = { path = "../renderer" }
storage = { path = "../storage" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
